# comissionaer

./: .gitignore  CLAUDE.md  pyproject.toml  pyrightconfig.json
calcfab/: __main__.py  calc.py  cli.py  models.py  report.py
calcfab/data/: adicionais.py  cidades.py  habilitacoes.py  soldos.py
comissionaer/: __main__.py  calc.py  cli.py  models.py  report.py  xls_io.py  yaml_io.py
comissionaer/data/: adicionais.py  cidades.py  habilitacoes.py  soldos.py
