[project]
name = "comissionaer"
version = "0.2.0"
description = "Análise de economicidade de comissionamento da FAB"
requires-python = ">=3.14"
dependencies = [
    "fpdf2>=2.8.7",
    "pdfplumber>=0.11.9",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "xlrd>=2.0.2",
    "xlutils>=2.0.0",
    "xlwt>=1.3.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.12",
    "xlrd>=2.0.2",
]

[project.scripts]
comissionaer = "comissionaer.__main__:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
